--- a/index.html
+++ b/index.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>login</title>
-    </head>
-   <body>
-<div class="container">
+<html lang="es">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Página de inicio de sesión</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<header class="encabezado">
+	</header>
 
-    <div class= "info">
-     
-        <p class="txt-1"> Gracias por visitarnos</p>
-
-        <h2>bienvenido de nuevo</h2>
-        <hr />
-        
-    </div>
-
-    <form class="fore">
-
-        <h2>login</h2>
-
-        <div class="inputs">
-
-            <input type="email" class="box" placeholder="ingresa tu correo">
-            <input type="password" class="box" placeholder="ingresa tu contraseña">
-
-            <a href="#">olvidastes tu contraseña?</a>
-
-            <input type="submit" value="login" class="submit">
-        </div>
-    </form>
-</div>
+	<div class="login-container">
+		<h1 class="login-title">Inicio de sesión</h1>
+		<form class="login-form">
+			<label class="form-label">
+				<input type="checkbox" name="docente" class="form-checkbox">
+				<span class="form-checkmark"></span>
+				Docente
+			</label>
+			<label class="form-label">
+				<input type="checkbox" name="estudiante" class="form-checkbox">
+				<span class="form-checkmark"></span>
+				Estudiante
+			</label>
+			<input type="text" name="usuario" placeholder="Nombre de usuario" class="form-input">
+			<input type="password" name="password" placeholder="Contraseña" class="form-input">
+			<button type="submit" class="form-button">Iniciar sesión</button>
+		</form>
+	</div>
+	<script src="script.js"></script>
 </body>
 </html>
