Se crea barra de progreso-PantallaDocente

--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Login Falso EdVisto</title>
+	<link rel="icon" type="image/x-icon" href="imagenes/Captura.PNG">
 	<link rel="stylesheet" href="style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +18,7 @@
 	<div class="login-container">
 		<h1 class="login-title">Iniciar sesión</h1>
 		<form class="login-form">
-			<input type="text" name="usuario" placeholder="Correo electrónico" class="form-input">
+			<input type="email" name="email" placeholder="Correo electrónico" class="form-input">
 			<label class="form-label"><input type="radio" checked="checked" name="radio"><span class="checkmark"></span>Soy profesor</label>
 			<label class="form-label"><input type="radio" name="radio"><span class="checkmark"></span>Soy estudiante</label>
 			<button type="submit" class="form-button">Ingresar</button>
@@ -25,4 +26,5 @@
 	</div>
 	
 </body>
+
 </html>
