Se ajusta etiqueta script y ancho de columnas pantallaEstudiante

--- a/estudiante.html
+++ b/estudiante.html
@@ -9,8 +9,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
-  <script src="script.js"></script>
-	
+  	
 </head>
 
 <body>
@@ -27,7 +26,7 @@
                </div>
             <div class="input-box" onsubmit="return validarEmail()">
               <h3>Email líder del proyecto</h3>
-                <input class="input-box-email" type="email" id="email" name="email" required minlength="4" maxlength="256" placeholder="Correo electrónico"> 
+                <input class="input-box-email" type="email" id="email" name="email" minlength="4" maxlength="256" placeholder="Correo electrónico"> 
                   </div>
               <div class="input-box-tittle">
                 <h3>Pegar URL</h3>
@@ -87,6 +86,7 @@
     <button class="btn">SALIR</button>
   </div>
 
+  <script src="script.js"></script>
 
 </body>
 
