Se ajustan campo email y url PantallaEstudiante

--- a/estudiante.html
+++ b/estudiante.html
@@ -28,14 +28,15 @@
               <h3>Email líder del proyecto</h3>
                 <input class="input-box-email" type="email" id="email" name="email" minlength="4" maxlength="256" placeholder="Correo electrónico"> 
                   </div>
-              <div class="input-box-tittle">
-                <h3>Pegar URL</h3>
-                  </div>
+                    <div class="form-group-estudiante">
+                     <label for="input-url-estudiante">URL:</label>
+                      <input type="url" id="input-url" name="url" placeholder="Url aquí">
+                        </div>
 
     </div>
     <div class="column">
         <div class="input-box">
-          <h3>Título del proyecto</h3>
+          <h3>TITULO DEL PROYECTO</h3>
             <input type="text" placeholder="EJ: El Universo">
               </div>
                 <div class="input-box">
@@ -44,9 +45,7 @@
                       <textarea class="textinput" placeholder="Escribe aquí" rows="8" cols="40"></textarea>
                         </div>
                          </div>
-                           <div class="input-box-url">
-                            <input type="text" placeholder="URL">
-                              </div>
+
     </div>
 
 
