Se ajusta limitación de caracteres PantallaEstudiante

--- a/estudiante.html
+++ b/estudiante.html
@@ -22,7 +22,7 @@
     <div class="column">
         <div class="input-box">
           <h3>Líder del proyecto</h3>
-            <input type="text" placeholder="EJ: Juan Gómez">
+            <input type="text" minlength="4" maxlength="80" placeholder="EJ: Juan Gómez">
                </div>
             <div class="input-box" onsubmit="return validarEmail()">
               <h3>Email líder del proyecto</h3>
@@ -37,12 +37,12 @@
     <div class="column">
         <div class="input-box">
           <h3>TITULO DEL PROYECTO</h3>
-            <input type="text" placeholder="EJ: El Universo">
+            <input type="text" minlength="4" maxlength="80" placeholder="EJ: El Universo">
               </div>
                 <div class="input-box">
                   <h3>Descripción del video</h3>
                     <div class="container-textarea">
-                      <textarea class="textinput" placeholder="Escribe aquí" rows="8" cols="40"></textarea>
+                      <textarea class="textinput" minlength="4" maxlength="500" placeholder="Escribe aquí" rows="8" cols="40"></textarea>
                         </div>
                          </div>
 
