Se crea la pantalla 1 estudiante

--- a/docente.html
+++ b/docente.html
@@ -18,7 +18,7 @@
 	</header>
 
     <div class="select-container">
-        <label for="select-menu">Nombre y apellido de los alumnos:</label>
+        <label for="select-menu">Nombre y apellido del alumno:</label>
         <select id="select-menu">
           <option value="opcion-1">Andrés Camilo Martinez Gómez</option>
           <option value="opcion-2">Jorge Eduardo Torres Peréz</option>
