Se estructura script en login para acceder a pantallas

--- a/estudiantepantalla1.html
+++ b/estudiantepantalla1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Estudiante</title>
+	<title>Estudiante - Ver Calificaciones</title>
     <link rel="icon" type="image/x-icon" href="imagenes/Captura.PNG">
     <link rel="stylesheet" href="style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,43 +18,49 @@
 
   </header>
 
-  <form class="form-estudiante">
-  <div class="column-estudiante1">
-    <h2>¡BIENVENIDO (A)!</h2>
-    <div class="input-box-estudiante1">
-      <h3>TITULO DEL PROYECTO:</h3>
-      <input type="text" placeholder="Ingresa tu texto aquí">
+  <div class="container-colum">
+    <div class="column">
+        <div class="input-box">
+          <h3>Líder del proyecto</h3>
+            <input type="text" minlength="4" maxlength="80" placeholder="EJ: Juan Gómez">
+               </div>
+            <div class="input-box" onsubmit="return validarEmail()">
+              <h3>Email líder del proyecto</h3>
+                <input class="input-box-email" type="email" id="email" name="email" minlength="4" maxlength="256" placeholder="Correo electrónico"> 
+                  </div>
+                    <div class="form-group-estudiante">
+                     <label for="input-url-estudiante">URL:</label>
+                      <input type="url" id="input-url" name="url" placeholder="Url aquí">
+                        </div>
+
     </div>
-    <div class="input-box-estudiante1">
-      <h3>URL:</h3>
-      <input type="url" placeholder="Ingresa tu URL aquí">
+    <div class="column">
+        <div class="input-box">
+          <h3>TITULO DEL PROYECTO</h3>
+            <input type="text" minlength="4" maxlength="80" placeholder="EJ: El Universo">
+              </div>
+                <div class="input-box">
+                  <h3>Descripción del video</h3>
+                    <div class="container-textarea">
+                      <textarea class="textinput" minlength="4" maxlength="500" placeholder="Escribe aquí" rows="8" cols="40"></textarea>
+                        </div>
+                         </div>
+
     </div>
-    <div class="input-box-estudiante1">
-      <h3>Descripción:</h3>
-      <textarea class="textarea-estudiante1" placeholder="Ingresa tu texto aquí"></textarea>
-    </div>
-    <div class="input-box-estudiante1">
-      <h3>Líder del proyecto</h3>
-      <input type="text" placeholder="Ingresa tu texto aquí">
-    </div>
-    <div class="input-box-estudiante1">
-      <h3>Email líder del proyecto</h3>
-      <input type="email" placeholder="Ingresa tu email aquí">
-    </div>
-    <div class="input-box-estudiante1">
-      <h3>Correo electrónico del profesor</h3>
-      <input type="email" placeholder="Ingresa el email de tu profesor aquí">
+
+
+    <div class="column">
+      <div class="input-box" onsubmit="return validarEmail()">
+        <h3>Email profesor</h3>
+          <input class="input-box-email" type="email" id="email" name="email" minlength="4" maxlength="256" placeholder="Correo electrónico"> 
+            </div>
+
+        
     </div>
   </div>
-  <div class="column">
-      <img src="imagenes/5891.jpg" alt="Imagen">
-  </div>
-</form>
-   
   
-  <div class="btn-estudiante1">
-    <button class="btn1">ENVIAR</button>
-    <button class="btn1">SALIR</button>
+  <div class="btn-container">
+    <button class="btn">ENVIAR</button>
   </div>
 
   <script src="script.js"></script>
