--- a/estudiantepantalla2.html
+++ b/estudiantepantalla2.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Estudiante</title>
+	<title>Estudiante - Ver Calificaciones</title>
     <link rel="icon" type="image/x-icon" href="imagenes/Captura.PNG">
     <link rel="stylesheet" href="style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -81,7 +81,6 @@
   </div>
   
   <div class="btn-container">
-    <button class="btn">ENVIAR</button>
     <button class="btn">SALIR</button>
   </div>
 
