Se ajustan margenes

--- a/estudiantepantalla1.html
+++ b/estudiantepantalla1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Estudiante - Ver Calificaciones</title>
+	<title>Estudiante - Cargar Video</title>
     <link rel="icon" type="image/x-icon" href="imagenes/Captura.PNG">
     <link rel="stylesheet" href="style.css">
 	  <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,11 +28,11 @@
                </div>
                  <div class="input-box" onsubmit="return validarEmail()">
                    <h3>Email líder del proyecto</h3>
-                     <input class="input-box-email" type="email" id="email" name="email" minlength="4" maxlength="256" placeholder="Correo electrónico"> 
+                     <input class="input-box-email" type="email" id="email" name="email" required minlength="4" maxlength="256" placeholder="Correo electrónico"> 
                       </div>
                         <div class="input-box" onsubmit="return validarEmail()">
                          <h3>Email profesor</h3>
-                          <input class="input-box-email" type="email" id="email" name="email" minlength="4" maxlength="256" placeholder="Correo electrónico"> 
+                          <input class="input-box-email" type="email" id="email" name="email" requiredminlength="4" maxlength="256" placeholder="Correo electrónico"> 
                             </div>
                               <div class="form-group-estudiante">
                                 <label for="input-url-estudiante">URL:</label>
@@ -52,6 +52,7 @@
                          </div>
 
     </div>
+    
   </div>
     
   <div class="btn-container">
