Se ajusta script

--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
 		  <input type="radio" class="checkmark" id="role-teacher" name="role" value="docente" required><span class="checkmark"></span>Soy profesor</label>
 		  
 	
-		  <button type="submit" id="login-btn">Ingresar</button>
+		  <button type="submit" id="submit">Ingresar</button>
 		</form>
 	  </div>
 		
