Se ajustan colores y script funcionalidad

--- a/estudiantepantalla1.html
+++ b/estudiantepantalla1.html
@@ -25,31 +25,31 @@
   <div class="container-colum">
     <div class="column">
         <div class="input-box">
-          <h3>Líder del proyecto</h3>
+          <h3 class="h3-azul">Líder del proyecto</h3>
             <input type="text" minlength="4" maxlength="80" placeholder="EJ: Juan Gómez">
                </div>
                  <div class="input-box" onsubmit="return validarEmail()">
-                   <h3>Email líder del proyecto</h3>
+                   <h3 class="h3-azul">Email líder del proyecto</h3>
                      <input class="input-box-email" type="email" id="email" name="email" required minlength="4" maxlength="256" placeholder="Correo electrónico"> 
                       </div>
                         <div class="input-box" onsubmit="return validarEmail()">
-                         <h3>Email profesor</h3>
-                          <input class="input-box-email" type="email" id="email" name="email" requiredminlength="4" maxlength="256" placeholder="Correo electrónico"> 
+                         <h3 class="h3-azul">Email profesor</h3>
+                          <input class="input-box-email" type="email" id="email" name="email" requiredminlength="4" maxlength="256" placeholder="Correo electrónico de tu profesor aquí"> 
                             </div>
                               <div class="form-group-estudiante">
-                                <label for="input-url-estudiante">URL:</label>
-                                 <input type="url" id="input-url" name="url" placeholder="Url aquí">
+                                <h3 class="h3-azul" for="input-url-estudiante">Pegar URL:</h3>
+                                 <input type="url" id="input-url" name="url" placeholder="URL aquí">
                                   </div>
     </div>
     <div class="column">
       <div class="input-box">
         <h3>Título del proyecto</h3>
-          <input type="text" minlength="4" maxlength="80" placeholder="EJ: El Universo">
+          <input type="text" minlength="4" maxlength="80" placeholder="El título de tu proyecto EJ: El Universo">
             </div>
                 <div class="input-box">
-                  <h3>Descripción del video</h3>
+                  <h3 class="h3-celesteoscuro">Descripción del video</h3>
                     <div class="container-textarea">
-                      <textarea class="textinput" minlength="4" maxlength="500" placeholder="Escribe aquí" rows="11" cols="40"></textarea>
+                      <textarea class="textinput" minlength="4" maxlength="500" placeholder="Describe tu proyecto" rows="12" cols="43"></textarea>
                         </div>
                          </div>
 
