Se ajusta script

--- a/estudiantepantalla1.html
+++ b/estudiantepantalla1.html
@@ -26,11 +26,11 @@
     <div class="column">
         <div class="input-box">
           <h3 class="h3-azul">Líder del proyecto</h3>
-            <input type="text" minlength="4" maxlength="80" placeholder="EJ: Juan Gómez">
+            <input type="text" id="name-leader" minlength="4" maxlength="80" placeholder="EJ: Juan Gómez">
                </div>
                  <div class="input-box" onsubmit="return validarEmail()">
                    <h3 class="h3-azul">Email líder del proyecto</h3>
-                     <input class="input-box-email" type="email" id="email" name="email" required minlength="4" maxlength="256" placeholder="Correo electrónico"> 
+                     <input class="input-box-email" type="email" id="email-student" name="email" required minlength="4" maxlength="256" placeholder="Correo electrónico"> 
                       </div>
                         <div class="input-box" onsubmit="return validarEmail()">
                          <h3 class="h3-azul">Email profesor</h3>
