Se ajustan colores y columnas login/estudiante/docente

--- a/estudiantepantalla1.html
+++ b/estudiantepantalla1.html
@@ -18,6 +18,9 @@
     <div class="btn-inicio">
       <a href="login.html" class="btn-cerrar-sesion">Cerrar sesión</a>
         </div>
+    
+        <h1 class="title-bienvenidadoc">BIENVENIDO (A) ESTUDIANTE</h1>
+
   </header>
 
   
