--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<header class="header">
-		<h1 class="title-bienvenida">BIENVENIDO (A)</h1>
+		<h1 class="title-bienvenidalog">BIENVENIDO (A)</h1>
 	</header>
 
 	<div class="login-container">
