--- a/docente.html
+++ b/docente.html
@@ -13,13 +13,16 @@
 </head>
 
 <body>
-	<header class="header">
-    
-    <div class="btn-inicio">
-        <a href="login.html" class="btn-cerrar-sesion">Cerrar sesión</a>
-            </div>
 
-</header>
+	<header class="header">
+        <div class="btn-inicio">
+            <a href="login.html" class="btn-cerrar-sesion">Cerrar sesión</a>
+                </div>
+        <h1 class="title-bienvenidadoc">BIENVENIDO (A) PROFESOR (A)</h1>
+    
+
+
+    </header>
 
 <div class="select-container">
     <label for="select-menu">Nombre y apellido del alumno:</label>
