Se ajusta título de habilidades en docente

--- a/docente.html
+++ b/docente.html
@@ -44,7 +44,7 @@
             <div class="column">
                 <div class="container-calificaciones">
                     <div class="title-hability">
-                        <h4>HABILIDADES INDIVIDUALES</h4>
+                        <h4>HABILIDADES GRUPALES</h4>
                     </div>
                     <div class="progress-bar-1" id="progress-bar-1">
                         <div class="title">Colaboración</div>
