--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
 		  <input type="radio" class="checkmark" id="role-teacher" name="role" value="docente" required><span class="checkmark"></span>Soy Profesor</label>
 		  
 	
-		  <button type="submit" id="submit">Ingresar</button>
+		  <button type="submit" class="submit" id="submit">Ingresar</button>
 		</form>
 
 	</div>
