Se activa script funcionalidad docente

--- a/docente.html
+++ b/docente.html
@@ -19,15 +19,15 @@
             <a href="login.html" class="btn-cerrar-sesion">Cerrar sesión</a>
                 </div>
         <h1 class="title-bienvenidadoc">BIENVENIDO (A) PROFESOR (A)</h1>
-    
-
-
     </header>
 
 <div class="select-container">
     <label for="select-menu">Nombre y apellido del alumno:</label>
         <select id="select-menu">
-          <option value="opcion-1">Andrés Camilo Martinez Gómez</option>
+          <option value="opcion-1">Betina Bournissent</option>
+          <option value="opcion-2">Marcela Solís Sanchez</option>
+          <option value="opcion-3">Dario Andres Fuentes</option>
+          <option value="opcion-4">Roberto Carlos Monserrat</option>
             </select>
                 </div>
 
@@ -35,7 +35,7 @@
     <label for="url-input">URL:</label>
         <a href="https://www.youtube.com/channel/UC3EFKdXAU99jQ7DQs6WXFqQ" target="_blank">https://www.youtube.com/channel/UC3EFKdXAU99jQ7DQs6WXFqQ</a>
             </div>
-
+<!--SeccionF-->
 <div class="calification-title">
     <h2>CALIFICAR VIDEO</h2>
         </div>
@@ -101,7 +101,7 @@
 </div>          
 
       
-<script src="script.js"></script>
+<script src="scriptTeacher.js"></script>
 
 </body>
 
