--- a/estudiante.html
+++ b/estudiante.html
@@ -27,7 +27,7 @@
     <div class="column">
         <div class="input-box">
           <h3 class="h3-azul">Líder del proyecto</h3>
-            <input type="text" id="name-leader" minlength="4" maxlength="80" placeholder="EJ: Juan Gómez">
+            <input type="text" id="name-leader" minlength="4" maxlength="80" name="name-leader" required placeholder="EJ: Juan Gómez">
                </div>
                  <div class="input-box" onsubmit="return validarEmail()">
                    <h3 class="h3-azul">Email líder del proyecto</h3>
@@ -35,7 +35,7 @@
                       </div>
                         <div class="input-box" onsubmit="return validarEmail()">
                          <h3 class="h3-azul">Email profesor</h3>
-                          <input class="input-box-email" id="emailTeacher" type="email" name="email" requiredminlength="4" maxlength="256" placeholder="Correo electrónico de tu profesor aquí"> 
+                          <input class="input-box-email" id="emailTeacher" type="email" name="email" required minlength="4" maxlength="256" placeholder="Correo electrónico de tu profesor aquí"> 
                             </div>
                               <div class="form-group-estudiante">
                                 <h3 class="h3-azul" for="input-url-estudiante">Pegar URL:</h3>
@@ -63,7 +63,7 @@
   </form>
   
 
-  <script src="script.js"></script>
+  <script src="scriptStudent.js"></script>
 
 </body>
 
