Se ajusta responsive pantalla estudiante

--- a/estudiante.html
+++ b/estudiante.html
@@ -30,7 +30,7 @@
             <input type="text" id="name-leader" minlength="4" maxlength="80" name="name-leader" required placeholder="EJ: Juan Gómez">
                </div>
                  <div class="input-box" onsubmit="return validarEmail()">
-                   <h3 class="h3-azul">Email líder del proyecto</h3>
+                   <h3 class="h3-azul">Email líder proyecto</h3>
                      <input class="input-box-email" type="email" id="email-student" name="email" required minlength="4" maxlength="256" placeholder="Correo electrónico"> 
                       </div>
                         <div class="input-box" onsubmit="return validarEmail()">
